interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INS
Rule 1     INS -> INS I puntoycoma
Rule 2     INS -> I puntoycoma
Rule 3     I -> ASIGNACION
Rule 4     I -> FUNCION
Rule 5     I -> STRUCT
Rule 6     I -> LLAMADA
Rule 7     I -> IF
Rule 8     I -> WHILE
Rule 9     I -> FOR
Rule 10    I -> BREAK
Rule 11    I -> CONTINUE
Rule 12    I -> RETURN
Rule 13    I -> error puntoycoma
Rule 14    BLOQUE -> INS end
Rule 15    BLOQUE -> end
Rule 16    TIPO -> tipo_int64
Rule 17    TIPO -> tipo_float64
Rule 18    TIPO -> tipo_bool
Rule 19    TIPO -> tipo_char
Rule 20    TIPO -> tipo_string
Rule 21    ASIGNACION -> ID igual ASIGNACION_VALOR
Rule 22    ASIGNACION -> global id igual ASIGNACION_VALOR
Rule 23    ASIGNACION -> global id
Rule 24    ASIGNACION -> local id igual ASIGNACION_VALOR
Rule 25    ASIGNACION -> local id
Rule 26    ASIGNACION_VALOR -> E
Rule 27    ASIGNACION_VALOR -> E tipo TIPO
Rule 28    FUNCION -> function id parentesis_A PAR parentesis_B BLOQUE
Rule 29    FUNCION -> function id parentesis_A parentesis_B BLOQUE
Rule 30    PAR -> PAR coma P
Rule 31    PAR -> P
Rule 32    P -> id
Rule 33    STRUCT -> struct id ATR end
Rule 34    STRUCT -> mutable struct id ATR end
Rule 35    ATR -> ATR A
Rule 36    ATR -> A
Rule 37    A -> id tipo TIPO puntoycoma
Rule 38    A -> id puntoycoma
Rule 39    EXP -> EXP coma E
Rule 40    EXP -> E
Rule 41    E -> E mas E
Rule 42    E -> E menos E
Rule 43    E -> E asterisco E
Rule 44    E -> E barra E
Rule 45    E -> E caret E
Rule 46    E -> E modulo E
Rule 47    E -> menos E
Rule 48    E -> E mayor E
Rule 49    E -> E menor E
Rule 50    E -> E mayor_igual E
Rule 51    E -> E menor_igual E
Rule 52    E -> E igualacion E
Rule 53    E -> E diferenciacion E
Rule 54    E -> E or E
Rule 55    E -> E and E
Rule 56    E -> not E
Rule 57    E -> parentesis_A E parentesis_B
Rule 58    E -> LLAMADA
Rule 59    E -> ACCESO_ARREGLO
Rule 60    E -> ARREGLO
Rule 61    E -> ID
Rule 62    E -> int64
Rule 63    E -> float64
Rule 64    E -> bool
Rule 65    E -> char
Rule 66    E -> string
Rule 67    E -> nothing
Rule 68    ARREGLO -> corchete_A EXP corchete_B
Rule 69    ARREGLO -> corchete_A corchete_B
Rule 70    LLAMADA -> id parentesis_A EXP parentesis_B
Rule 71    LLAMADA -> id parentesis_A parentesis_B
Rule 72    ACCESO_ARREGLO -> id corchete_A E corchete_B
Rule 73    ID -> ID punto id
Rule 74    ID -> id
Rule 75    IF -> if E BLOQUE
Rule 76    IF -> if E BLOQUE ELSEIF
Rule 77    IF -> if E BLOQUE ELSE
Rule 78    ELSEIF -> elseif E BLOQUE
Rule 79    ELSEIF -> elseif E BLOQUE ELSEIF
Rule 80    ELSEIF -> elseif E BLOQUE ELSE
Rule 81    ELSE -> else BLOQUE
Rule 82    WHILE -> while E BLOQUE
Rule 83    FOR -> for id in E BLOQUE
Rule 84    FOR -> for id in RANGO BLOQUE
Rule 85    RANGO -> E dospuntos E
Rule 86    BREAK -> break
Rule 87    CONTINUE -> continue
Rule 88    RETURN -> return E
Rule 89    RETURN -> return

Terminals, with rules where they appear

and                  : 55
asterisco            : 43
barra                : 44
bool                 : 64
break                : 86
caret                : 45
char                 : 65
coma                 : 30 39
continue             : 87
corchete_A           : 68 69 72
corchete_B           : 68 69 72
diferenciacion       : 53
dospuntos            : 85
else                 : 81
elseif               : 78 79 80
end                  : 14 15 33 34
error                : 13
float64              : 63
for                  : 83 84
function             : 28 29
global               : 22 23
id                   : 22 23 24 25 28 29 32 33 34 37 38 70 71 72 73 74 83 84
if                   : 75 76 77
igual                : 21 22 24
igualacion           : 52
in                   : 83 84
int64                : 62
local                : 24 25
mas                  : 41
mayor                : 48
mayor_igual          : 50
menor                : 49
menor_igual          : 51
menos                : 42 47
modulo               : 46
mutable              : 34
not                  : 56
nothing              : 67
or                   : 54
parentesis_A         : 28 29 57 70 71
parentesis_B         : 28 29 57 70 71
punto                : 73
puntoycoma           : 1 2 13 37 38
return               : 88 89
string               : 66
struct               : 33 34
tipo                 : 27 37
tipo_bool            : 18
tipo_char            : 19
tipo_float64         : 17
tipo_int64           : 16
tipo_string          : 20
while                : 82

Nonterminals, with rules where they appear

A                    : 35 36
ACCESO_ARREGLO       : 59
ARREGLO              : 60
ASIGNACION           : 3
ASIGNACION_VALOR     : 21 22 24
ATR                  : 33 34 35
BLOQUE               : 28 29 75 76 77 78 79 80 81 82 83 84
BREAK                : 10
CONTINUE             : 11
E                    : 26 27 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 72 75 76 77 78 79 80 82 83 85 85 88
ELSE                 : 77 80
ELSEIF               : 76 79
EXP                  : 39 68 70
FOR                  : 9
FUNCION              : 4
I                    : 1 2
ID                   : 21 61 73
IF                   : 7
INS                  : 1 14 0
LLAMADA              : 6 58
P                    : 30 31
PAR                  : 28 30
RANGO                : 84
RETURN               : 12
STRUCT               : 5
TIPO                 : 27 37
WHILE                : 8

Parsing method: LALR

state 0

    (0) S' -> . INS
    (1) INS -> . INS I puntoycoma
    (2) INS -> . I puntoycoma
    (3) I -> . ASIGNACION
    (4) I -> . FUNCION
    (5) I -> . STRUCT
    (6) I -> . LLAMADA
    (7) I -> . IF
    (8) I -> . WHILE
    (9) I -> . FOR
    (10) I -> . BREAK
    (11) I -> . CONTINUE
    (12) I -> . RETURN
    (13) I -> . error puntoycoma
    (21) ASIGNACION -> . ID igual ASIGNACION_VALOR
    (22) ASIGNACION -> . global id igual ASIGNACION_VALOR
    (23) ASIGNACION -> . global id
    (24) ASIGNACION -> . local id igual ASIGNACION_VALOR
    (25) ASIGNACION -> . local id
    (28) FUNCION -> . function id parentesis_A PAR parentesis_B BLOQUE
    (29) FUNCION -> . function id parentesis_A parentesis_B BLOQUE
    (33) STRUCT -> . struct id ATR end
    (34) STRUCT -> . mutable struct id ATR end
    (70) LLAMADA -> . id parentesis_A EXP parentesis_B
    (71) LLAMADA -> . id parentesis_A parentesis_B
    (75) IF -> . if E BLOQUE
    (76) IF -> . if E BLOQUE ELSEIF
    (77) IF -> . if E BLOQUE ELSE
    (82) WHILE -> . while E BLOQUE
    (83) FOR -> . for id in E BLOQUE
    (84) FOR -> . for id in RANGO BLOQUE
    (86) BREAK -> . break
    (87) CONTINUE -> . continue
    (88) RETURN -> . return E
    (89) RETURN -> . return
    (73) ID -> . ID punto id
    (74) ID -> . id

    error           shift and go to state 13
    global          shift and go to state 15
    local           shift and go to state 17
    function        shift and go to state 18
    struct          shift and go to state 19
    mutable         shift and go to state 20
    id              shift and go to state 16
    if              shift and go to state 21
    while           shift and go to state 22
    for             shift and go to state 23
    break           shift and go to state 24
    continue        shift and go to state 25
    return          shift and go to state 26

    INS                            shift and go to state 1
    I                              shift and go to state 2
    ASIGNACION                     shift and go to state 3
    FUNCION                        shift and go to state 4
    STRUCT                         shift and go to state 5
    LLAMADA                        shift and go to state 6
    IF                             shift and go to state 7
    WHILE                          shift and go to state 8
    FOR                            shift and go to state 9
    BREAK                          shift and go to state 10
    CONTINUE                       shift and go to state 11
    RETURN                         shift and go to state 12
    ID                             shift and go to state 14

state 1

    (0) S' -> INS .
    (1) INS -> INS . I puntoycoma
    (3) I -> . ASIGNACION
    (4) I -> . FUNCION
    (5) I -> . STRUCT
    (6) I -> . LLAMADA
    (7) I -> . IF
    (8) I -> . WHILE
    (9) I -> . FOR
    (10) I -> . BREAK
    (11) I -> . CONTINUE
    (12) I -> . RETURN
    (13) I -> . error puntoycoma
    (21) ASIGNACION -> . ID igual ASIGNACION_VALOR
    (22) ASIGNACION -> . global id igual ASIGNACION_VALOR
    (23) ASIGNACION -> . global id
    (24) ASIGNACION -> . local id igual ASIGNACION_VALOR
    (25) ASIGNACION -> . local id
    (28) FUNCION -> . function id parentesis_A PAR parentesis_B BLOQUE
    (29) FUNCION -> . function id parentesis_A parentesis_B BLOQUE
    (33) STRUCT -> . struct id ATR end
    (34) STRUCT -> . mutable struct id ATR end
    (70) LLAMADA -> . id parentesis_A EXP parentesis_B
    (71) LLAMADA -> . id parentesis_A parentesis_B
    (75) IF -> . if E BLOQUE
    (76) IF -> . if E BLOQUE ELSEIF
    (77) IF -> . if E BLOQUE ELSE
    (82) WHILE -> . while E BLOQUE
    (83) FOR -> . for id in E BLOQUE
    (84) FOR -> . for id in RANGO BLOQUE
    (86) BREAK -> . break
    (87) CONTINUE -> . continue
    (88) RETURN -> . return E
    (89) RETURN -> . return
    (73) ID -> . ID punto id
    (74) ID -> . id

    error           shift and go to state 13
    global          shift and go to state 15
    local           shift and go to state 17
    function        shift and go to state 18
    struct          shift and go to state 19
    mutable         shift and go to state 20
    id              shift and go to state 16
    if              shift and go to state 21
    while           shift and go to state 22
    for             shift and go to state 23
    break           shift and go to state 24
    continue        shift and go to state 25
    return          shift and go to state 26

    I                              shift and go to state 27
    ASIGNACION                     shift and go to state 3
    FUNCION                        shift and go to state 4
    STRUCT                         shift and go to state 5
    LLAMADA                        shift and go to state 6
    IF                             shift and go to state 7
    WHILE                          shift and go to state 8
    FOR                            shift and go to state 9
    BREAK                          shift and go to state 10
    CONTINUE                       shift and go to state 11
    RETURN                         shift and go to state 12
    ID                             shift and go to state 14

state 2

    (2) INS -> I . puntoycoma

    puntoycoma      shift and go to state 28


state 3

    (3) I -> ASIGNACION .

    puntoycoma      reduce using rule 3 (I -> ASIGNACION .)


state 4

    (4) I -> FUNCION .

    puntoycoma      reduce using rule 4 (I -> FUNCION .)


state 5

    (5) I -> STRUCT .

    puntoycoma      reduce using rule 5 (I -> STRUCT .)


state 6

    (6) I -> LLAMADA .

    puntoycoma      reduce using rule 6 (I -> LLAMADA .)


state 7

    (7) I -> IF .

    puntoycoma      reduce using rule 7 (I -> IF .)


state 8

    (8) I -> WHILE .

    puntoycoma      reduce using rule 8 (I -> WHILE .)


state 9

    (9) I -> FOR .

    puntoycoma      reduce using rule 9 (I -> FOR .)


state 10

    (10) I -> BREAK .

    puntoycoma      reduce using rule 10 (I -> BREAK .)


state 11

    (11) I -> CONTINUE .

    puntoycoma      reduce using rule 11 (I -> CONTINUE .)


state 12

    (12) I -> RETURN .

    puntoycoma      reduce using rule 12 (I -> RETURN .)


state 13

    (13) I -> error . puntoycoma

    puntoycoma      shift and go to state 29


state 14

    (21) ASIGNACION -> ID . igual ASIGNACION_VALOR
    (73) ID -> ID . punto id

    igual           shift and go to state 30
    punto           shift and go to state 31


state 15

    (22) ASIGNACION -> global . id igual ASIGNACION_VALOR
    (23) ASIGNACION -> global . id

    id              shift and go to state 32


state 16

    (70) LLAMADA -> id . parentesis_A EXP parentesis_B
    (71) LLAMADA -> id . parentesis_A parentesis_B
    (74) ID -> id .

    parentesis_A    shift and go to state 33
    igual           reduce using rule 74 (ID -> id .)
    punto           reduce using rule 74 (ID -> id .)


state 17

    (24) ASIGNACION -> local . id igual ASIGNACION_VALOR
    (25) ASIGNACION -> local . id

    id              shift and go to state 34


state 18

    (28) FUNCION -> function . id parentesis_A PAR parentesis_B BLOQUE
    (29) FUNCION -> function . id parentesis_A parentesis_B BLOQUE

    id              shift and go to state 35


state 19

    (33) STRUCT -> struct . id ATR end

    id              shift and go to state 36


state 20

    (34) STRUCT -> mutable . struct id ATR end

    struct          shift and go to state 37


state 21

    (75) IF -> if . E BLOQUE
    (76) IF -> if . E BLOQUE ELSEIF
    (77) IF -> if . E BLOQUE ELSE
    (41) E -> . E mas E
    (42) E -> . E menos E
    (43) E -> . E asterisco E
    (44) E -> . E barra E
    (45) E -> . E caret E
    (46) E -> . E modulo E
    (47) E -> . menos E
    (48) E -> . E mayor E
    (49) E -> . E menor E
    (50) E -> . E mayor_igual E
    (51) E -> . E menor_igual E
    (52) E -> . E igualacion E
    (53) E -> . E diferenciacion E
    (54) E -> . E or E
    (55) E -> . E and E
    (56) E -> . not E
    (57) E -> . parentesis_A E parentesis_B
    (58) E -> . LLAMADA
    (59) E -> . ACCESO_ARREGLO
    (60) E -> . ARREGLO
    (61) E -> . ID
    (62) E -> . int64
    (63) E -> . float64
    (64) E -> . bool
    (65) E -> . char
    (66) E -> . string
    (67) E -> . nothing
    (70) LLAMADA -> . id parentesis_A EXP parentesis_B
    (71) LLAMADA -> . id parentesis_A parentesis_B
    (72) ACCESO_ARREGLO -> . id corchete_A E corchete_B
    (68) ARREGLO -> . corchete_A EXP corchete_B
    (69) ARREGLO -> . corchete_A corchete_B
    (73) ID -> . ID punto id
    (74) ID -> . id

    menos           shift and go to state 39
    not             shift and go to state 40
    parentesis_A    shift and go to state 41
    int64           shift and go to state 46
    float64         shift and go to state 47
    bool            shift and go to state 48
    char            shift and go to state 49
    string          shift and go to state 50
    nothing         shift and go to state 51
    id              shift and go to state 52
    corchete_A      shift and go to state 53

    E                              shift and go to state 38
    LLAMADA                        shift and go to state 42
    ACCESO_ARREGLO                 shift and go to state 43
    ARREGLO                        shift and go to state 44
    ID                             shift and go to state 45

state 22

    (82) WHILE -> while . E BLOQUE
    (41) E -> . E mas E
    (42) E -> . E menos E
    (43) E -> . E asterisco E
    (44) E -> . E barra E
    (45) E -> . E caret E
    (46) E -> . E modulo E
    (47) E -> . menos E
    (48) E -> . E mayor E
    (49) E -> . E menor E
    (50) E -> . E mayor_igual E
    (51) E -> . E menor_igual E
    (52) E -> . E igualacion E
    (53) E -> . E diferenciacion E
    (54) E -> . E or E
    (55) E -> . E and E
    (56) E -> . not E
    (57) E -> . parentesis_A E parentesis_B
    (58) E -> . LLAMADA
    (59) E -> . ACCESO_ARREGLO
    (60) E -> . ARREGLO
    (61) E -> . ID
    (62) E -> . int64
    (63) E -> . float64
    (64) E -> . bool
    (65) E -> . char
    (66) E -> . string
    (67) E -> . nothing
    (70) LLAMADA -> . id parentesis_A EXP parentesis_B
    (71) LLAMADA -> . id parentesis_A parentesis_B
    (72) ACCESO_ARREGLO -> . id corchete_A E corchete_B
    (68) ARREGLO -> . corchete_A EXP corchete_B
    (69) ARREGLO -> . corchete_A corchete_B
    (73) ID -> . ID punto id
    (74) ID -> . id

    menos           shift and go to state 39
    not             shift and go to state 40
    parentesis_A    shift and go to state 41
    int64           shift and go to state 46
    float64         shift and go to state 47
    bool            shift and go to state 48
    char            shift and go to state 49
    string          shift and go to state 50
    nothing         shift and go to state 51
    id              shift and go to state 52
    corchete_A      shift and go to state 53

    E                              shift and go to state 54
    LLAMADA                        shift and go to state 42
    ACCESO_ARREGLO                 shift and go to state 43
    ARREGLO                        shift and go to state 44
    ID                             shift and go to state 45

state 23

    (83) FOR -> for . id in E BLOQUE
    (84) FOR -> for . id in RANGO BLOQUE

    id              shift and go to state 55


state 24

    (86) BREAK -> break .

    puntoycoma      reduce using rule 86 (BREAK -> break .)


state 25

    (87) CONTINUE -> continue .

    puntoycoma      reduce using rule 87 (CONTINUE -> continue .)


state 26

    (88) RETURN -> return . E
    (89) RETURN -> return .
    (41) E -> . E mas E
    (42) E -> . E menos E
    (43) E -> . E asterisco E
    (44) E -> . E barra E
    (45) E -> . E caret E
    (46) E -> . E modulo E
    (47) E -> . menos E
    (48) E -> . E mayor E
    (49) E -> . E menor E
    (50) E -> . E mayor_igual E
    (51) E -> . E menor_igual E
    (52) E -> . E igualacion E
    (53) E -> . E diferenciacion E
    (54) E -> . E or E
    (55) E -> . E and E
    (56) E -> . not E
    (57) E -> . parentesis_A E parentesis_B
    (58) E -> . LLAMADA
    (59) E -> . ACCESO_ARREGLO
    (60) E -> . ARREGLO
    (61) E -> . ID
    (62) E -> . int64
    (63) E -> . float64
    (64) E -> . bool
    (65) E -> . char
    (66) E -> . string
    (67) E -> . nothing
    (70) LLAMADA -> . id parentesis_A EXP parentesis_B
    (71) LLAMADA -> . id parentesis_A parentesis_B
    (72) ACCESO_ARREGLO -> . id corchete_A E corchete_B
    (68) ARREGLO -> . corchete_A EXP corchete_B
    (69) ARREGLO -> . corchete_A corchete_B
    (73) ID -> . ID punto id
    (74) ID -> . id

    puntoycoma      reduce using rule 89 (RETURN -> return .)
    menos           shift and go to state 39
    not             shift and go to state 40
    parentesis_A    shift and go to state 41
    int64           shift and go to state 46
    float64         shift and go to state 47
    bool            shift and go to state 48
    char            shift and go to state 49
    string          shift and go to state 50
    nothing         shift and go to state 51
    id              shift and go to state 52
    corchete_A      shift and go to state 53

    E                              shift and go to state 56
    LLAMADA                        shift and go to state 42
    ACCESO_ARREGLO                 shift and go to state 43
    ARREGLO                        shift and go to state 44
    ID                             shift and go to state 45

state 27

    (1) INS -> INS I . puntoycoma

    puntoycoma      shift and go to state 57


state 28

    (2) INS -> I puntoycoma .

    error           reduce using rule 2 (INS -> I puntoycoma .)
    global          reduce using rule 2 (INS -> I puntoycoma .)
    local           reduce using rule 2 (INS -> I puntoycoma .)
    function        reduce using rule 2 (INS -> I puntoycoma .)
    struct          reduce using rule 2 (INS -> I puntoycoma .)
    mutable         reduce using rule 2 (INS -> I puntoycoma .)
    id              reduce using rule 2 (INS -> I puntoycoma .)
    if              reduce using rule 2 (INS -> I puntoycoma .)
    while           reduce using rule 2 (INS -> I puntoycoma .)
    for             reduce using rule 2 (INS -> I puntoycoma .)
    break           reduce using rule 2 (INS -> I puntoycoma .)
    continue        reduce using rule 2 (INS -> I puntoycoma .)
    return          reduce using rule 2 (INS -> I puntoycoma .)
    $end            reduce using rule 2 (INS -> I puntoycoma .)
    end             reduce using rule 2 (INS -> I puntoycoma .)


state 29

    (13) I -> error puntoycoma .

    puntoycoma      reduce using rule 13 (I -> error puntoycoma .)


state 30
